# rs-usb-host

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  prepare.bat  prepare.sh
src/: ps2x2pico.c  rs-usb-host.c  rs-usb-host.h  scancodes.c  serialout.c  usbin.c
